crates/htui/tests/snapshots/skills__agent_help_proposal.snap
---
source: crates/htui/tests/skills.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
 Skills │ Templates
┌ proposal from scripted · sent → proposed ────────────────────────────────────────────────────────┐
│--- sent                                                                                          │
│+++ proposed                                                                                      │
│@@ -1 +1 @@                                                                                       │
│-Prefer `expect` with a reason. One error enum per crate.                                         │
│\ No newline at end of file                                                                       │
│+Prefer `expect`. One error enum per crate.                                                       │
│\ No newline at end of file                                                                       │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

 Enter accept · n/Esc discard · J/K scroll · PgUp/PgDn page
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
