crates/htui/tests/snapshots/skills__attachments.snap
---
source: crates/htui/tests/skills.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 run
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
 Skills │ Templates
┌ attachments · rust-style ────────────────────────────────────────────────────────────────────────┐
│  global                       —                                                                  │
│* htui                         always · latest · pos 1                                            │
│    analysis › research        —                                                                  │
│    analysis › verdict         —                                                                  │
│    bug › reproduce            —                                                                  │
│    bug › fix                  —                                                                  │
│    bug › review               —                                                                  │
│    feature › prd              —                                                                  │
│    feature › plan             —                                                                  │
│*   feature › implement        always · v1 · pos 2                                                │
│    feature › review           —                                                                  │
│    refactor › plan            —                                                                  │
│    refactor › implement       —                                                                  │
│    refactor › review          —                                                                  │
│    tooling › plan             —                                                                  │
│    tooling › implement        —                                                                  │
│    tooling › review           —                                                                  │
│  agy                          —                                                                  │
│    analysis › research        —                                                                  │
│    analysis › verdict         —                                                                  │
│    bug › reproduce            —                                                                  │
│    bug › fix                  —                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

 j/k move  Enter edit  x detach  r reload  Esc back
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces
