crates/htui/tests/snapshots/skills__browse.snap
---
source: crates/htui/tests/skills.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 runs
 1 Backlog  2 Skills  3 Settings  4 Chat
 Skills │ Templates
┌ Skills ────────────────────────────────────┐┌ rust-style v2 (head v2) ~23 tok (chars-v2) ────────┐
│  rust-style                 v2   —     ~23 ││Prefer `expect` with a reason. One error enum per   │
│  tests                      v1   always ~15││crate.                                              │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
└────────────────────────────────────────────┘└────────────────────────────────────────────────────┘

 j/k move  ,/. version  b base  d diff  e description  E edit  n new  r reload
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces
