crates/htui/tests/snapshots/skills__editor_help.snap
---
source: crates/htui/tests/skills.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 runs
 1 Backlog  2 Skills  3 Settings  4 Chat
 Skills │ Templates
┌ rust-style · editing from v2, saves v3 ────────────────────┐┌ rust-style ────────────────────────┐
│Prefer `expect` with a reason. One error enum per crate.    ││the name is the library key         │
│                                                            ││and it never moves                  │
│                                                            ││                                    │
│                                                            ││a save appends a version;           │
│                                                            ││it never rewrites one               │
│                                                            ││                                    │
│                                                            ││two tokens guard it: the            │
│                                                            ││head version, and the               │
│                                                            ││skill's updated_at                  │
│                                                            ││                                    │
│                                                            ││a spent token keeps the             │
│                                                            ││draft and moves both                │
│                                                            ││                                    │
│                                                            ││the body is markdown, so            │
│                                                            ││nothing parses it here              │
│                                                            ││                                    │
│                                                            ││Ctrl+E hands the draft to           │
│                                                            ││$EDITOR                             │
│                                                            ││                                    │
│                                                            ││                                    │
│                                                            ││                                    │
│                                                            ││                                    │
└────────────────────────────────────────────────────────────┘└────────────────────────────────────┘

 Ctrl+S save  Ctrl+E $EDITOR  Esc cancel  L1:C1
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces
