crates/htui/tests/snapshots/skills__import_report.snap
---
source: crates/htui/tests/skills.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
 Skills │ Templates
┌ import report ───────────────────────────────────────────────────────────────────────────────────┐
│>! /nonexistent/htui-import-report — could not read `/nonexistent/htui-import-report` (No such    │
│file or directory (os error 2))                                                                   │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

 j/k move  r reload  Esc back
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
