crates/htui/tests/snapshots/skills__library.snap
---
source: crates/htui/tests/skills.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
 Skills │ Templates
┌ Skills ──────────────────────┐┌ rust-style v2 (head v2) · ~42 tokens ────────────────────────────┐
│  rust-style             v2   ││House Rust conventions: no `unwrap` off the test path, one error  │
│  tests                  v1   ││enum per crate                                                    │
│                              ││                                                                  │
│                              ││Prefer `expect` with a reason. One error enum per crate.          │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘

 j/k · ,/. version · b base · d diff · e edit · E $EDITOR · n new · I import · i info · a attach
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
