crates/htui/tests/snapshots/skills__naming.snap
---
source: crates/htui/tests/skills.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 runs
 1 Backlog  2 Skills  3 Settings  4 Chat
 Skills │ Templates
┌ Skills ────────────────────────────────────┐┌ name and description ──────────────────────────────┐
│  rust-style                 v2   —     ~23 ││ name: house-rules                                  │
│  tests                      v1   —     ~15 ││ description: the ones we always follow             │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
└────────────────────────────────────────────┘└────────────────────────────────────────────────────┘

 Tab next field  Enter confirm  Esc cancel
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces
